VoiceOver does not echo text insertions and deletions when a contenteditable div has a non editable descendant element with a content editable child https://bugs.webkit.org/show_bug.cgi?id=223818

Reviewed by Chris Fleizach.

Source/WebCore:

Test: accessibility/nested-textareas-value-changed-notifications.html

AXObjectCache::textChanged now only notifies the closest non-native text
control of value changes. This avoid the problem of multiple value
changed notifications in a row when there are nested text areas.
Removed AccessibilityRenderObject::textChanged and moved that
functionality to AXObjectCache::textChanged, where it belongs.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::textChanged):
* accessibility/AccessibilityObject.h:
* accessibility/AccessibilityObjectInterface.h:
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::textChanged): Deleted.
* accessibility/AccessibilityRenderObject.h:
* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::textChanged): Deleted.
* accessibility/isolatedtree/AXIsolatedObject.h:

LayoutTests:

* accessibility/nested-textareas-value-changed-notifications-expected.txt: Added.
* accessibility/nested-textareas-value-changed-notifications.html: Added.


Canonical link: https://commits.webkit.org/236300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275664 268f45cc-cd09-0410-ab3c-d52691b4dbfc